frontend: finish Intro.vue
frontend: add dialog structure and store
frontend: prepare for user auth store

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -21,10 +21,14 @@ body {
 }
 
 button {
+    display: flex;
     height: 32px;
     width: 64px;
     background-color: whitesmoke;
     border-radius: 0.4rem;
+    color: black;
+    align-items: center;
+    justify-content: center;
     transition: background-color 0.2s ease-in-out;
     /* Add a transition effect to the background-color property */
 }
