--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -8,7 +8,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 1.5;
 }
