backend: add entrypoint of team fetching
frontend: add animation and transition to navbar
frontend: add constants and types
frontend: rename Intro to lead-in
frontend: add teams view

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -19,3 +19,10 @@ body {
     flex-direction: column;
     color: white;
 }
+
+.flex-panel {
+    @apply w-full;
+    @media (min-width: 640px) {
+        width: 48rem;
+    }
+}
