adjust some styles

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -46,6 +46,10 @@ body {
     display: none; /* Chrome Safari */
   }
 
+.nogu-brand-small {
+letter-spacing: 4px
+}
+
 .nogu-brand {
-    letter-spacing: 20%
+    letter-spacing: 10px
 }
