frontend: design overhaul (#2)
* overhaul

* spacing 2

* fix nested css warning

* solve flex-panel not centered

* fix icon out of range

* adjust some styles

---------

Co-authored-by: Ari Arimaniac <arily@arily.moe>

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -45,3 +45,11 @@ body {
 ::-webkit-scrollbar {
     display: none; /* Chrome Safari */
   }
+
+.nogu-brand-small {
+letter-spacing: 4px
+}
+
+.nogu-brand {
+    letter-spacing: 10px
+}
